# ml-homelab

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  QUICKSTART.md  README.md  docker-compose.yaml  hello_ray_job.py  init.sh  kind-config.yaml  pyproject.toml  ray_job_example.py  stop.sh
.astro/: config.yaml
config/: README.md  prometheus.yml
config/grafana/provisioning/dashboards/: ray-dashboards.yml
config/grafana/provisioning/dashboards/json/: .gitkeep  data_grafana_dashboard.json  default_grafana_dashboard.json  serve_deployment_grafana_dashboard.json  serve_grafana_dashboard.json  serve_llm_grafana_dashboard.json  train_grafana_dashboard.json
docs/: docker-setup.md  kuberay-setup.md
examples/mnist_training/: run.sh  train_mnist.py
helm/: ray-cluster-values.yaml
scripts/: common.sh  init.sh  kuberay-init.sh  kuberay-status.sh  kuberay-stop.sh  setup-metrics.sh  stop.sh
streamlit_app/: app.py  requirements.txt
streamlit_app/jobs/mnist_training/: run.sh  runtime_env.yaml  train_mnist.py
streamlit_app/jobs/resnet_inference/: inference.py  runtime_env.yaml
